<resources>
    <string name="app_name">Do It Later</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="do_it_later">Do It Later</string>
    <string name="to_do_task">To-do tasks</string>
    <string name="completed_task">Completed tasks</string>
    <string name="all_tasks">All tasks</string>
    <string name="feedback_help"><![CDATA[Feedback & Help]]></string>
    <string name="sort_by">Sort by</string>
    <string name="action_search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_action">Save</string>
    <string name="add_more_action">Add more</string>
    <string name="activity_editnote_title">Edit Note</string>
    <string name="activity_addnote_title">Add Note</string>
    <string name="google_api_key01">AIzaSyAa4xmLTdyUCfbnWgrRtwgSTV7Irtix4Ko</string>
    <string name="open_map_activity_title">Set location</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="empty_view_text">No To-Do Task</string>
    <string name="pref_title_theme_color">Theme color</string>
    <string name="pref_key_theme_color">pref_theme_color</string>
    <string name="theme_default">theme_default</string>
    <string name="pref_key_show_image">pref_key_show_image</string>
    <string name="pref_title_show_reminder">Show reminder on items</string>
    <string name="pref_title_show_image">Show image on items</string>
    <string name="pref_key_show_location">pref_key_show_location</string>
    <string name="pref_title_show_location">Show location on items</string>
    <string name="pref_key_show_reminder">pref_key_show_reminder</string>
    <string name="pref_key_sort">pref_key_sort</string>
    <string name="pref_title_sort">Sort items by</string>
    <string-array name="pref_option_sort">
        <item>Priority</item>
        <item>Title</item>
        <item>Created On</item>
    </string-array>
    <string-array name="pref_option_sort_values">
        <item>priority</item>
        <item>title</item>
        <item>time</item>
    </string-array>
</resources>
